--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="header">
-        <img src="images/logo.png" alt="Header Image">
+        <img src="logo.png" alt="Header Image">
         <h1>Hacked Client</h1>
     </div>
     <div class="main-content">
-        <img src="images/image.png" alt="Bigger Image">
+        <img src="image.png" alt="Bigger Image">
         <button id="myButton">Click me</button>
     </div>
     <script src="script.js"></script>
