--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <div class="header">
         <img src="logo.png" alt="Header Image">
-        <h1>Hacked Client</h1>
+        <h1>Website Example</h1>
     </div>
     <div class="main-content">
         <img src="image.png" alt="Bigger Image">
-        <button id="myButton">Click me</button>
+        <button id="myButton">Button</button>
     </div>
     <script src="script.js"></script>
 </body>
